--- a/index.html
+++ b/index.html
@@ -8,8 +8,17 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
-	<div class='container'>
-		<a id='outputEl'></a>
+	<div class="container">
+		<div class="output">
+			<a id='outputEl'></a>
+		</div>
+		<div class="option">
+			<p>Dark</p>
+			<input type="checkbox" id="checkDark" checked>
+		</div>
+		<div class="option">
+			<button id="buttonSave">Save Options</button>
+		</div>
 	</div>
 </body>
 <script type="text/javascript" src="script.js"></script>
